--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   material_symbols_icons: ^4.2815.1
   firebase_core: ^3.15.1
   url_launcher: ^6.3.2
+  another_flushbar: ^1.12.30
+  cloud_firestore: ^5.6.12
+  firebase_storage: ^12.4.10
 
 dev_dependencies:
   flutter_test:
